# any-to-markdown

./: .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/any_to_markdown/: __init__.py  cli.py  input_handler.py  main.py  progress.py
tests/: test_cli.py  test_input_handler.py  test_main.py  test_progress.py
